finished and submitted report

--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -30,10 +30,10 @@
 \title{
 \includegraphics[width=1.75in]{lo_unil06_bleu.pdf} \\
 \vspace*{1in}
-\textbf{Do enhancer-associated lincRNAs contribute to chromosomal organization ?}}
+\textbf{Do enhancer-associated lincRNAs contribute to nuclear architecture ?}}
 
 \author{\Large{First Step Project}\\
-		Molecular Life Sciences, Bioinformatics\\
+		Master in Molecular Life Sciences, Bioinformatics\\
 				\vspace*{0.5in} \\
 		Cyril Matthey-Doret\\
         Supervised by: Jennifer Yihong Tan\\
@@ -60,7 +60,7 @@
 
 \section*{Abstract}
 
-A large proportion of the human transcriptome generates RNA products that are not translated into proteins. Intergenic long noncoding RNAs (lincRNAs), are such noncodiing RNAs that are longer than 200 nucleotides found within the intergenic space of the genome and they represent the largest part of the noncoding transcriptome in humans. Although only less than 1\% of these transcripts have been functionally annotated, they comprise a wide array of regulatory functions. In particular, instances of lincRNAs that originate from enhancer activities (elincRNAs) have been associated with regions of frequent chromosomal contacts, called topologically associating domains (TADs), which ultimately shape the transcriptome landscape of the genome. However, the genome-wide prevalence and impact of elincRNAs on the regulation of chromosomal architecture remain unknown. Here, using data from other functional genomics studies in human lymphoblastoid cells, I investigated the global role of elincRNAs in the spatial organization of the genome. Specifically, I found elincRNAs to co-localize with chromosomal loop anchors and binding sites of proteins known to promote chromosomal contacts, suggesting their likely biological relevance in modulating nuclear conformation.
+A large proportion of the human transcriptome generates RNA products that are not translated into proteins. Intergenic long noncoding RNAs (lincRNAs), are such noncoding RNAs that are longer than 200 nucleotides found within the intergenic spaces of the genome and they represent the largest part of the noncoding transcriptome in humans. Although only less than 1\% of these transcripts have been functionally annotated, they comprise a wide array of regulatory functions. In particular, instances of lincRNAs that originate from enhancer activities (elincRNAs) have been associated with regions of frequent chromosomal contacts, called topologically associating domains (TADs), which ultimately shape the transcriptome landscape of the genome. However, the genome-wide prevalence and impact of elincRNAs on the regulation of chromosomal architecture remain unknown. Here, using data from other functional genomics studies in human lymphoblastoid cells, I investigated the global role of elincRNAs in the spatial organization of the genome. Specifically, I found elincRNAs to co-localize with chromosomal loop anchors and binding sites of proteins known to promote chromosomal contacts, suggesting their likely biological relevance in modulating nuclear conformation.
 
 \section*{Introduction}
 It was only discovered in the past decade that a surprisingly large proportion of the mammalian transcriptome does not code for proteins. To date, the number of annotated noncoding genes longer than 200 nucleotides (long noncoding RNA, lncRNA) exceeds that of protein-coding genes by at least 3 times \cite{Iyer2015}⁠. Amongst all lncRNAs, those that do not overlap protein-coding genes, referred to as long intergenic noncoding RNAs (lincRNAs), are the most abundant. Functional and evolutionary analyses, together with extensive characterization of a handful of lincRNAs, have demonstrated that some of these transcripts are involved in the regulation of gene expression programs, both transcriptionally and post-transcriptionally, and that they can contribute to organismal traits and diseases \cite{Kornienko2013}⁠. However, the mechanisms and functions, if any, for the majority of lincRNAs remain unknown \cite{Rinn2012}⁠.  
@@ -69,11 +69,11 @@ A large proportion of lincRNAs originate from active enhancers. These enhancers 
 
 Recently, a set of such enhancer-derived lincRNAs that were associated with human trait variants, were shown to regulate local gene expression in \textit{cis} in human lymphoblastoid cell lines (LCLs). Importantly, higher frequencies of chromosomal interactions are often observed at these loci relative to other lincRNAs, suggesting that elincRNAs may be involved in gene regulation through modulating chromatin architecture (Tan et al, 2016, under revision).
 
-Gene regulation is shaped by spatial organization of the genome \cite{Engreitz2016}⁠⁠. Specifically, the folding of genomic DNA into variably compact chromosomal structures can strongly influence expression of the embedded genes \cite{Gorkin2014}⁠⁠. Globally, regions with low degree of compaction, referred to as euchromatin, are associated with high levels of active transcription. On the other hand, relatively uncondensed and less transcriptionally active regions are called heterochromatin \cite{Passarge1979}\cite{Tamaru2010}⁠. Chromosomes are further compartmentalized into smaller domains, called topologically associating domains (TADs), where frequent DNA:DNA interactions occur as a result of their close spatial proximity. These domains are key in modulating gene transcriptional programs. Recent findings show that regions near TAD borders, called TAD boundaries, are essential for modulating gene regulatory interactions within TADs and preventing chromatin contacts across TADs. Deletion of TAD boundaries can disrupt those interactions, resulting in gene misexpression and disease phenotypes \cite{Lupianez2015}⁠.
+Gene regulation is shaped by spatial organization of the genome \cite{Engreitz2016}⁠⁠. Specifically, the folding of genomic DNA into variably compact chromosomal structures can strongly influence expression of the embedded genes \cite{Gorkin2014}⁠⁠. Globally, regions with low degree of compaction, referred to as euchromatin, are associated with high levels of active transcription. On the other hand, relatively condensed and less transcriptionally active regions are called heterochromatin \cite{Passarge1979}\cite{Tamaru2010}⁠. Chromosomes are further compartmentalized into smaller domains, called topologically associating domains (TADs), where frequent DNA:DNA interactions occur as a result of their close spatial proximity. These domains are key in modulating gene transcriptional programs. Recent findings show that regions near TAD borders, called TAD boundaries, are essential for modulating gene regulatory interactions within TADs and preventing chromatin contacts between TADs. Deletion of TAD boundaries can disrupt those interactions, resulting in gene misexpression and disease phenotypes \cite{Lupianez2015}⁠.
 
-Detailed functional characterizations of a few elincRNAs have established the molecular mechanisms underlying their roles in the spatial organization of the genome. For example, Haunt is one such elincRNA \cite{Yin2015}⁠⁠, which regulates the expression of the HOXA gene cluster by modulating intrachromosomal interactions, specifically through establishing promoter-enhancer looping. These recent findings raise the question on what is the prevalence of elincRNAs contributing to gene regulation through modulating chromosomal conformation.
+Detailed functional characterizations of a few elincRNAs have established the molecular mechanisms underlying their roles in the spatial organization of the genome. For example, Haunt is one such elincRNA \cite{Yin2015}⁠⁠, which regulates the expression of the HOXA gene cluster by modulating intrachromosomal looping. These recent findings raise the question on what is the prevalence of elincRNAs contributing to gene regulation through modulating chromosomal conformation.
 
-Using publicly available multi-omics data from human LCLs. I investigated the functional role and prevalence of elincRNAs in nuclear organization. Specifically, I examined their enrichment in regions that are key in TAD regulation and their association with the amount of chromosomal interactions to gain initial insights into their roles in gene regulation within topological domains. My analyses show that elincRNAs are associated with high density of DNA:DNA contacts within TADs and are significantly enriched in binding sites of proteins important for TAD regulation. Importantly, elincRNAs are strongly enriched at chromosomal loop anchors where promoter-enhancer interactions occur. Together, my findings support the hypothesis that elincRNAs may contribute to gene regulation by establishing contacts between gene regulatory elements and modulating chromosomal organization.
+Using publicly available multi-omics data from human LCLs. I investigated the functional role and prevalence of elincRNAs in nuclear organization. Specifically, I examined their enrichment in regions that are key in TAD regulation and their association with the amount of chromosomal interactions to gain initial insights into their roles in gene regulation within topological domains. My analyses show that elincRNAs are associated with high density of DNA:DNA contacts within TADs and are significantly enriched in binding sites of proteins important for TAD regulation. Importantly, elincRNAs are strongly enriched at chromosomal loop anchors where promoter-enhancer interactions are frequent. Together, my findings support the hypothesis that elincRNAs may contribute to gene regulation by establishing contacts between gene regulatory elements and modulating chromosomal organization.
 
 \section*{Results}
 
@@ -97,7 +97,7 @@ Next, to examine whether elincRNAs are associated with the regulation of chromos
 
 Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. The transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF only or CTCF and cohesin collectively are important for the structural maintenance of TADs. These loops act as insulators, preventing interactions between TADs. In contrast, loops anchors bound only by cohesin are crucial in mediating regulatory intra-chromosomal interactions, supported by the evidence that cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
 
-I found that elincRNA promoter regions are significantly enriched in both CTCF and cohesin binding sites in LCL (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$, union of binding sites for cohesin subunits SMC3 and RAD21 are used to identify cohesin binding, methods). This enrichment is greater than the one found for other LCL-expressed lincRNAs (fold enrichment = 1.3 and 1.3, $q<0.05$, Figure \ref{enrich_elinc}B) for both CTCF and cohesin binding sites.
+I found that elincRNA promoter regions are significantly enriched in both CTCF and cohesin binding sites in LCL (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$, union of binding sites for cohesin subunits SMC3 and RAD21 are used to identify cohesin binding, Methods). This enrichment is greater than the one found for other LCL-expressed lincRNAs (fold enrichment = 1.3 and 1.3, $q<0.05$, Figure \ref{enrich_elinc}B) for both CTCF and cohesin binding sites.
 
 Because loops mediated by CTCF and cohesin synergistically are thought to have different roles in chromosomal organization from those mediated by cohesin only  \cite{Ji2016} and a large proportion of binding sites for CTCF and cohesin overlap in the human genome (Figure \ref{enrich_elinc}C)⁠, I further determined the independent enrichment of elincRNAs in CTCF- and cohesin-only binding sites, using mutually exclusive binding sites for these proteins. This revealed a greater enrichment of cohesin binding sites (Figure \ref{enrich_elinc}D) in elincRNA loci (fold enrichment = 13.1, $q=1e-04$) compared to that of CTCF (fold enrichment = 3.92, $q=1e-04$). This suggests elincRNAs are more frequently involved in the formation of cohesin-only loops, supporting their roles in modulating promoter-enhancer looping.
 
@@ -132,7 +132,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/3_TAD_loop_definition.pdf}
-	\caption{Schematic representation of topologically associating domains (TADs) and loops using Hi-C matrices. \textbf{A)} TADs and \textbf{B)} chromatin loop represented on a Hi-C intra-chromosomal contact matrix visualized as a symmetrical square matrix (center panel) using Juicebox (Durand et al., 2016)⁠ and as upper triangles, for simplified representation (side panels). Colour intensity of matrix pixels reflect the density of interactions. Left panel: Two TADs are illustrated as two triangular sub-matrices (triangles with blue and green outlines). Frequent interactions occur within these regions while interactions across TADs are less frequent. These two TADs correspond to the two globular chromatin structures within the blue and green circles. a and b denote the borders of the first TAD while c and d represent the borders of the second TAD. Boundaries (blue and green rectangles) are expanded inwards from the borders. Right: Chromosomal loop with a and b representing the loop anchors. Unlike TADs, strong DNA:DNA contact is observed only at the contacting point between loop anchors, while less frequent contact occurs in the region between the two anchor points. }
+	\caption{Schematic representation of topologically associating domains (TADs) and loops using Hi-C matrices. \textbf{A.} TADs and \textbf{B.} chromatin loop represented on a Hi-C intra-chromosomal contact matrix visualized as a symmetrical square matrix (center panel) using Juicebox (Durand et al., 2016)⁠ and as upper triangles, for simplified representation (side panels). Colour intensity of matrix pixels reflect the density of interactions. Left panel: Two TADs are illustrated as two triangular sub-matrices (triangles with blue and green outlines). Frequent interactions occur within these regions while interactions across TADs are less frequent. These two TADs correspond to the two globular chromatin structures within the blue and green circles. a and b denote the borders of the first TAD while c and d represent the borders of the second TAD. Boundaries (blue and green rectangles) are expanded inwards from the borders. Right: Chromosomal loop with a and b representing the loop anchors. Unlike TADs, strong DNA:DNA contact is observed only at the contacting point between loop anchors, while less frequent contact occurs in the region between the two anchor points. }
 	\label{TAD_loop_def}
 \end{figure}
 
@@ -146,7 +146,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/5_TAD_TAD_contact.pdf}
-	\caption{elincRNA-containing TADs are associated with significantly higher density of DNA:DNA contacts. \textbf{A.} Mean of interactions within a TAD is computed by summing all DNA contacts within the TAD (purple triangles) and dividing by TAD length. \textbf{B.} Average contact frequency within TADs that encompass elincRNA and other LCL-expressed lincRNAs across four cell lines, GM12878 (orange), HUVEC(green), K562 (blue) and NHEK (purple). Set of genes as defined in GM12878 are used for all comparisons. Difference between groups are tested using the two tailed Mann-Whitney U test, $***P<0.001; *P<0.05$; $-$ non-significant}
+	\caption{elincRNA-containing TADs are associated with significantly higher density of DNA:DNA contacts. \textbf{A.} Mean of interactions within each TAD is computed by summing all DNA contacts within the TAD (purple triangles) and dividing by TAD length. \textbf{B.} Average contact frequency within TADs that encompass elincRNA and other LCL-expressed lincRNAs across four cell lines, GM12878 (orange), HUVEC (green), K562 (blue) and NHEK (purple). Set of genes as defined in GM12878 are used for all comparisons. Difference between groups are tested using the two tailed Mann-Whitney U test, $***P<0.001; *P<0.05$; $-$ non-significant}
 	\label{TAD_TAD_contacts}
 \end{figure}
 
@@ -160,10 +160,9 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/6_interactions.pdf}
-	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal. For each position $d$, the sum of all values in the blue diamond ($V_d$) is computed, representing a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of $w$ (blue loops at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum in the diamond at position $d$ along the matrix diagonal. Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
+	\caption{Visual representation of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} A diamond (blue) of width $w$ set to 100kb is slid on all positions ($d$) along the diagonal of each intrachromosomal contact matrix. \textbf{B.} At each position $d$, the sum of all values in the diamond ($V_d$) is computed. The sum is not computed at the first and last $w$ positions as the diamond would be outside the matrix limits. \textbf{C.} For each TAD, boundary regions are extended inwards from its borders until the sum recorded by the diamond ($V_d$) has increased its original value at the border by 10\% of the maximum value in the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side of the TAD, while all green elements relate to the right side.}
 	\label{interact_hic}
 \end{figure}
-
 
 \FloatBarrier
 \section*{Discussion}
@@ -172,14 +171,14 @@ Although it has been long recognized that chromosomal conformation has strong im
 
 LincRNAs originating from enhancers (elincRNAs) have been proposed to modulate chromosomal architecture \cite{Yin2015}⁠ and are frequently located within topologically associating domains (TADs) where high levels of genomic interactions occur compared to other expressed lincRNAs (Tan et al, 2016, under revision). Here, I used publicly available genomics data to investigate the prevalence of elincRNA regulation in modulating chromosomal architecture. Together with strong enrichment in cohesin binding at elincRNAs promoter regions, their frequent localization at loop anchors and association with high amount of intra-TAD contacts support their putative role in regulating enhancer-promoter loops. 
 
-There is ongoing debate on the biological relevance of elincRNA transcription in particular with regards to  whether their associated regulatory roles are transcript- or transcription-dependent. Notably, although the association between elincRNA expression and high frequency of chromosomal interactions suggests their putative function, this might be driven by the enhancer activities, rather than the elincRNA itself. Comparing elincRNAs to active enhancers that only produce unstable and bidirectionally-transcribed eRNAs can provide initial insights to  this key question. Ultimately, the dissection of the molecular mechanisms underlying enhancer-mediated regulation of chromosomal conformation will require genetic manipulations of elincRNA transcript abundances (i.e. by RNAi) and inhibiting their transcription (i.e. with CRISPR-Cas9) \cite{Li2013}⁠.
+There is ongoing debate on the biological relevance of elincRNA transcription in particular with regards to  whether their associated regulatory roles are transcript- or transcription-dependent. Notably, although the association between elincRNA expression and high frequency of chromosomal interactions suggests their putative function, this might be driven by the enhancer activities, rather than the elincRNA itself. Comparing elincRNAs to active enhancers that only produce unstable and bidirectionally-transcribed eRNAs can provide initial insights to  this key question. Ultimately, the dissection of the molecular mechanisms underlying enhancer-mediated regulation of chromosomal conformation will require genetic manipulations of elincRNA transcript abundances (i.e. by RNAi) and inhibiting their transcription (i.e. with CRISPRi) \cite{Li2013}⁠.
 
 Furthermore, extending this analysis, which focuses on within-topological domain interactions to between-TAD contacts (i.e. meta-TADs) \cite{Fraser2015}⁠, to inter-chromosomal contacts, and eventually to DNA associations with the nuclear lamina would provide a more complete and global overview of elincRNA-dependent chromosomal interactions. These analyses could also be extended to additional cell-lines to investigate whether the effect of elincRNAs in nuclear architecture is cell-line specific, or more generalized. 
 
-The current resolution of global chromosomal conformation capture techniques (including Hi-C) remains a limiting factor to measure accurate interaction frequencies at elincRNA loci as it is presently not possible to confidently examine contacts in regions smaller than the Hi-C resolution \cite{Rao2014}⁠. Instead, only an estimation of the region surrounding the gene can be measured. In addition, even using data with relatively high contact resolutions, bulk Hi-C technique provides only a mean estimate of all chromosomal contacts within a cell population, thus averaging out the cell-to-cell dynamics and variabilities. Recently, a single-cell Hi-C technique has been developed \cite{Nagano2013}⁠, allowing one to examine DNA contact profiles at a single cell resolution, although the precision of the method likely requires improvement. Such single cell techniques, combined with higher contact resolution, would provide greater power to investigate the impact of elincRNAs on gene expression regulation through modulating chromosome architecture.
+The current resolution of global chromosomal conformation capture techniques (including Hi-C) remains a limiting factor to measure accurate interaction frequencies at elincRNA loci as it is presently not possible to confidently examine contacts in regions smaller than the Hi-C resolution \cite{Rao2014}⁠. Instead, only an estimation of the region surrounding the gene can be measured. In addition, even using data with relatively high contact resolutions, bulk Hi-C technique provides only a mean estimate of all chromosomal contacts within a cell population, thus averaging out the cell-to-cell dynamics and variabilities. Recently, a single-cell Hi-C technique has been developed \cite{Nagano2013}⁠, allowing one to examine DNA contact profiles at a single cell resolution, although the precision of the method likely requires improvement. Such single cell techniques, combined with higher contact resolution, would provide greater power to investigate the impact of elincRNAs on chromosome architecture.
 
 \section*{Materials and methods}
-Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cite{RCoreTeam2016}⁠. Overlapping of genomic elements were done using either bedtools 2.26 \cite{Quinlan2010}⁠or the “intervals” package \cite{Bourgon2015}⁠ in R. Manipulations of Hi-C contact matrices were performed using the “Matrix” R package \cite{Bates2016}⁠. All positions of genetic elements used are based on the hg19 human assembly.
+Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cite{RCoreTeam2016}⁠. Overlapping of genomic elements were done using either bedtools 2.26 \cite{Quinlan2010} ⁠or the “intervals” package \cite{Bourgon2015}⁠ in R. Manipulations of Hi-C contact matrices were performed using the “Matrix” R package \cite{Bates2016}⁠. All positions of genetic elements used are based on the hg19 human assembly.
 
 \subsection*{elincRNA definition}
 
@@ -199,7 +198,7 @@ Peaks for CTCF, RAD21 and SMC3 in GM12878 were obtained from the ENCODE consorti
 
 \subsection*{Enrichment of genetic elements}
 
-All enrichment tests were performed using the genome association tester (GAT) ⁠ version 1.2. This tool tests for enrichment of the number of observed overlap between lincRNAs and genomic elements compared to what would be expected if they were distributed randomly. The null distribution was obtained by randomly sampling 10,000 times (with replacement) segments of the same length and matching GC content as the tested loci across the intergenic regions of the human genome. Enrichment of loop anchors at TAD boundaries was compared to random regions of the same size randomly placed across the whole genome. To control for potential confounding variables that correlate with GC content, such as gene density, the genome was divided into segments of 10 Kb and assigned to eight isochore bins in the enrichment analysis. The GC content of each bin was as follows: 0-36, 36-38, 38-40, 40-42, 42-44, 44-46, 46-48, 48-100 \cite{Heger2013}. 
+All enrichment tests were performed using the genome association tester (GAT)⁠ version 1.2. This tool tests for enrichment in the number of observed overlap between lincRNAs and genomic elements compared to what would be expected if they were distributed randomly. The null distribution was obtained by randomly sampling 10,000 times (with replacement) segments of the same length and matching GC content as the tested loci across the intergenic regions of the human genome. Enrichment of loop anchors at TAD boundaries was compared to random regions of the same size randomly placed across the whole genome. To control for potential confounding variables that correlate with GC content, such as gene density, the genome was divided into segments of 10 Kb and assigned to eight isochore bins in the enrichment analysis. The GC content of each bin was as follows: 0-36, 36-38, 38-40, 40-42, 42-44, 44-46, 46-48, 48-100 \cite{Heger2013}. 
 
 For all enrichment tests, two values are reported in the results section: Fold enrichment and q-value. Fold enrichment corresponds to the ratio between observed and median expected number of segment overlaps. Fold enrichments above 1 indicate the tested segments are enriched compared to random expectation, whereas those below 1 represent depletion in observed overlaps. The q-values are adjusted p-values using the Benjamin-Hochberg multiple-testing correction.
 
@@ -220,7 +219,7 @@ List of TADs coordinates in 4 different cell lines (GM12878, HUVEC, K562 and NHE
 
 \subsection*{TAD boundaries definition}
 
-TAD boundaries were defined using a custom algorithm based on the assumption that there are few interactions between elements located before and those after the boundaries. These interactions are measured by sliding the corner of a diamond of width $w$ (Figure \ref{interact_hic}A) on every position $d$ along diagonal of a square matrix $M$ of $n$ dimensions. The sum of interactions in the diamond is computed at each position $d$ between $1+w$ and $n-w$. The limits of $d$ were set to prevent the diamond from exceeding the limits of the matrix. The computed sum of interactions at each position $d$ is stored in a vector $V$. This can be rewritten as: 
+TAD boundaries were defined using a custom algorithm based on the assumption that there are few interactions between elements located before and those after the boundaries. These interactions are measured by sliding the corner of a diamond of width $w$ (Figure \ref{interact_hic}A) on every position $d$ along diagonal of a square matrix $M$ of $n$ dimensions. The sum of interactions in the diamond is computed at each position $d$ between $1+w$ and $n-w$ (Figure \ref{interact_hic}B). The limits of $d$ were set to prevent the diamond from exceeding the limits of the matrix. The computed sum of interactions at each position $d$ is stored in a vector $V$. This can be rewritten as: 
 
 \vspace{0.2in}
 $\left\{\begin{matrix}1\leq w\leq \frac{n}{2} \\ \forall d\in\left \{ 1+w , ... , n-w \right \}\end{matrix}\right. V_{d}=\sum_{i=d-w}^{d}\sum_{j=d}^{d+w}M_{i,j}$
@@ -228,22 +227,18 @@ $\left\{\begin{matrix}1\leq w\leq \frac{n}{2} \\ \forall d\in\left \{ 1+w , ... 
 
 \noindent The size of the diamond ($w$) was set to 100kb, based on the fact that the median length of filtered TADs is 140kb.
 
-For each TAD, boundary regions are extended inwards from the borders as long as the value of $V$ does not exceed an arbitrary threshold defined as the starting value (at the TAD border) plus 10\% of the maximum value in the TAD (Figure \ref{interact_hic}B).I discarded TAD boundaries which encompassed their entire TAD. 
-
-This shows the algorithm is not optimal and would need be improved to properly process the boundaries in these special cases. Lowering the threshold would reduce the number of boundaries that fail to stop inside their TAD, but it would also reduce the length of all boundaries. To accurately define boundaries, one would need a more complex algorithm that takes additional factors into account.
+For each TAD, boundary regions are extended inwards from the borders (Figure \ref{interact_hic}C) as long as the value of $V$ does not exceed an arbitrary threshold defined as the starting value (at the TAD border) plus 10\% of the maximum value in the TAD (Figure \ref{interact_hic}B).I discarded TAD boundaries which encompassed their whole TAD. These boundaries failed to stop due to TADs presenting relatively low differences between the contacts at their borders and their maximum value.
 
 \subsection*{intra-TAD contacts}
 
-The mean frequency of contact was estimated for each TAD that encompass a gene of interest (Figure \ref{interact_hic}B). For genes that overlap multiple TADs, contacts within each of the overlapping TAD is computed independently.
+The mean frequency of contact was estimated for each TAD that overlap a gene of interest (Figure \ref{interact_hic}B). For genes that overlap multiple TADs, contacts within each of the overlapping TAD is computed independently.
 
 \section*{Acknowledgements}
-I wish to thank Jennifer Yihong Tan for her precious advices and help throughout the project and writing of the report. I also wish to thank Ana Claudia Marques for her suggestions, general guidance and corrections in the report. Finally, I want to thank Adam Alexander Thil Smith for  his help with technical issues and code optimization and Maria Ferreira da Silva for her suggestions and critical reading of the report.
+I wish to thank Jennifer Yihong Tan for her precious advices and help throughout the project and writing of the report. I also wish to thank Ana Claudia Marques for her suggestions, general guidance and corrections in the report. Finally, I want to thank Adam Alexander Thil Smith for his help with technical issues and code optimization and Maria Ferreira da Silva for her suggestions and critical reading of the report.
 Computationally demanding analyses were performed at the Vital-IT Center for High Performance Computing of the Swiss Institute of Bioinformatics (www.vital-it.ch).
 
-\section{Supplementary Material}
-Code hosted at: \url{https://github.com/cmdoret/FSP_MLS}
-
-\noindent Manuscript data available at: \url{http://www.filedropper.com/fspdatatar}
+\section*{Supplementary Material}
+Code and manuscript data hosted at: \url{https://github.com/cmdoret/FSP_MLS}
 
 \noindent Raw contact matrices and normalization vector available at: \url{https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE63525}
 
